<resources>
    <string name="app_name">FCT</string>

    <string name="empresa">Empresas</string>
    <string name="alumno">Alumnos</string>
    <string name="visitaRealizada">Visitas Realizadas</string>
    <string name="proximaVisita">Proximas Visitas</string>
    <string name="prefInitalPageKey">initialPAge</string>
    <string name="daysKey">Days Key</string>
    <string name="daysTitle">Dias para la reunión</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_main_nav_empresas">Empresas</string>
    <string name="activity_main_nav_visitas">Visitas</string>
    <string name="activity_main_nav_alumnos">Alumnos</string>
    <string name="activity_main_nav_settings">Configuración</string>
    <string name="activity_main_nav_visitas_proximas">Proximas visitas</string>
    <string name="requiredCampo">Campo requerido</string>
    <string name="invalidNumber">Teléfono inválido</string>
    <string name="invalidEmail">Email no adminito</string>
    <string name="invalidURL">URL no válida</string>
    <string name="horaMayorError">La hora fin debe de ser mayor</string>
    <string name="prefPageTitle">Página Principal</string>
    <string name="prefInitalPageTitle">Página Principal</string>
    <string name="main_not_students_yet">Registre un nuevo alumno</string>
    <string name="not_companies_yet">Registre una empresa</string>
    <string name="not_reunion_yet">Realice una visita</string>
    <string name="not_reunion_made_yet">Necesita alumnos para realizar visitas</string>
</resources>
